# voxel-explore

./: .gitignore  Cargo.toml  README.md  build.rs  mise.toml  triangle.vert
renderdoc-captures/instancing captures e4cde3c/: renderdoc capture instancing.rdc
renderdoc-captures/instancing-control-branch captures b25ba8a/: launch settings instancing-control-branch.cap  renderdoc capture instancing-control-branch.rdc
src/: game.rs  geometry_primitives.rs  main.rs  other.rs  window.rs
src/shader/: atmos.frag  atmos.vert  mod.rs  shader.frag  shader.vert
src/vulkan/: device.rs  mod.rs  rendering.rs  swapchain.rs
