[package]
name = "voxel-explore"
version = "0.1.0"
edition = "2024"

[dependencies]
glfw = { version = "0.61.0", features = ["vulkan"] }
ash = { version = "0.38.0" }
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.29" }

[profile.dev]
codegen-units = 256
opt-level = 0
incremental = true

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=/OPT:NOREF"] # reduces MSVC linker work
